RTA logo & tag added

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="RATING" content="RTA-5042-1996-1400-1577-RTA" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
