removes homepage manager from Admin, changed name to XFansTube

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -8,11 +8,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Video Surfing - Your curated video directory"
+      content="XFansTube - Your curated video directory"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Video Surfing</title>
+    <title>XFansTube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
